--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # vite must always come first 
 
-VITE_API_URL=http://localhost:8000/api
+# VITE_API_URL=http://localhost:8000/api
+VITE_API_URL=https://backend-authproject.onrender.com/api
